--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "MONGO_USER=coviz19 MONGO_PASSWORD=k7YXZbw1k2DJ00bE MONGO_DATABASE=myFirstDatabase  node app.js",
+    "start-server": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "author": "coviz19",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.0"
   },
   "devDependencies": {
