--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.18.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "MONGO_USER=coviz19 MONGO_PASSWORD=k7YXZbw1k2DJ00bE MONGO_DATABASE=myFirstDatabase  node app.js",
+    "start": "MONGO_USER=coviz19 MONGO_PASSWORD=k7YXZbw1k2DJ00bE MONGO_DATABASE=myFirstDatabase node app.js",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
